<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/global_icon_size"
        android:layout_height="@dimen/global_icon_size"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_margin"
        android:layout_marginEnd="@dimen/global_margin"
        android:contentDescription="@string/appLogo"
        android:src="@mipmap/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/CameraImageButton"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/menu_top_distance"
        android:layout_marginEnd="@dimen/global_margin"
        android:layout_marginBottom="@dimen/global_bottom_distance"
        android:background="@color/blue"
        android:contentDescription="@string/camera_button"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:src="@drawable/linked_cameras"
        app:layout_constraintBottom_toTopOf="@+id/CameraTextView"
        app:layout_constraintEnd_toStartOf="@+id/HistoryImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/CameraTextView"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_top_distance"
        android:layout_marginEnd="@dimen/global_margin"
        android:layout_marginBottom="@dimen/global_margin"
        android:text="@string/camera_title"
        android:textAlignment="center"
        android:textSize="@dimen/menu_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ProfileImageButton"
        app:layout_constraintEnd_toStartOf="@+id/HistoryTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CameraImageButton" />

    <ImageButton
        android:id="@+id/HistoryImageButton"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/menu_top_distance"
        android:layout_marginEnd="@dimen/global_margin"
        android:layout_marginBottom="@dimen/global_bottom_distance"
        android:background="@color/blue"
        android:contentDescription="@string/history_button"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:src="@drawable/history"
        app:layout_constraintBottom_toTopOf="@+id/HistoryTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CameraImageButton"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/HistoryTextView"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_top_distance"
        android:layout_marginEnd="@dimen/global_margin"
        android:layout_marginBottom="@dimen/global_margin"
        android:text="@string/history_title"
        android:textAlignment="center"
        android:textSize="@dimen/menu_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LogOutImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CameraTextView"
        app:layout_constraintTop_toBottomOf="@+id/HistoryImageButton" />

    <ImageButton
        android:id="@+id/ProfileImageButton"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_margin"
        android:layout_marginEnd="@dimen/global_margin"
        android:layout_marginBottom="@dimen/global_bottom_distance"
        android:background="@color/blue"
        android:contentDescription="@string/profile_button"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/ProfileTextView"
        app:layout_constraintEnd_toStartOf="@+id/LogOutImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CameraTextView" />

    <TextView
        android:id="@+id/ProfileTextView"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_top_distance"
        android:layout_marginEnd="@dimen/global_margin"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textSize="@dimen/menu_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/LogOutTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileImageButton" />

    <ImageButton
        android:id="@+id/LogOutImageButton"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_margin"
        android:layout_marginEnd="@dimen/global_margin"
        android:layout_marginBottom="@dimen/global_bottom_distance"
        android:background="@color/blue"
        android:contentDescription="@string/exit_button"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toTopOf="@+id/LogOutTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ProfileImageButton"
        app:layout_constraintTop_toBottomOf="@+id/HistoryTextView" />

    <TextView
        android:id="@+id/LogOutTextView"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/global_margin"
        android:layout_marginTop="@dimen/global_top_distance"
        android:layout_marginEnd="@dimen/global_margin"
        android:text="@string/exit_title"
        android:textAlignment="center"
        android:textSize="@dimen/menu_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ProfileTextView"
        app:layout_constraintTop_toBottomOf="@+id/LogOutImageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>